refactored whole project to add factory functions and added reset button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
   <body>
     <h1>Tic-Tac-Toe</h1>
     <h2 id="winnerText"></h2>
-    <div class="boardContainer" id="boardContainer"></div>
+    <div class="boardContainer" id="boardContainer">
+      <div class="boardDiv"></div>
+      <div class="boardDiv"></div>
+      <div class="boardDiv"></div>
+      <div class="boardDiv"></div>
+      <div class="boardDiv"></div>
+      <div class="boardDiv"></div>
+      <div class="boardDiv"></div>
+      <div class="boardDiv"></div>
+      <div class="boardDiv"></div>
+    </div>
+    <button type="reset" id="reset">Reset</button>
     <form class="bg-modal">
       <div class="modal-content">
         <div class="close">+</div>
