--- a/index.html
+++ b/index.html
@@ -7,20 +7,23 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Tic-Tac-Toe</h1>
-    <h2 id="winnerText"></h2>
-    <div class="boardContainer" id="boardContainer">
-      <div class="boardDiv"></div>
-      <div class="boardDiv"></div>
-      <div class="boardDiv"></div>
-      <div class="boardDiv"></div>
-      <div class="boardDiv"></div>
-      <div class="boardDiv"></div>
-      <div class="boardDiv"></div>
-      <div class="boardDiv"></div>
-      <div class="boardDiv"></div>
+    <div class="root">
+      <h1>Tic-Tac-Toe</h1>
+      <h2 id="winnerText"></h2>
+      <div class="boardContainer" id="boardContainer">
+        <div class="boardDiv"></div>
+        <div class="boardDiv"></div>
+        <div class="boardDiv"></div>
+        <div class="boardDiv"></div>
+        <div class="boardDiv"></div>
+        <div class="boardDiv"></div>
+        <div class="boardDiv"></div>
+        <div class="boardDiv"></div>
+        <div class="boardDiv"></div>
+      </div>
+      <button type="reset" id="reset">Reset</button>
     </div>
-    <button type="reset" id="reset">Reset</button>
+
     <form class="bg-modal">
       <div class="modal-content">
         <div class="close">+</div>
